setting up basic HTML structure for views

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     
+    <section id="home" class="page">
+        <h1>FoodFit</h1>
+        <p>This is a description of the FoodFit app. You conjecture is totally wrong, I assure you. If I can perceive her regard for him, he must be a simpleton, indeed, not to discover it too. Those were your words.</p>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
