--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="/"> Home</a></li>
         <li><a href="/about">About Us</a></li>
         <li><a href="/food-search">Recipe Search</a></li>
+        <li><a href="/activity-search">Activity Search</a></li>
     </ul>
     </nav>
     
@@ -32,13 +33,19 @@
             <input type="text" placeholder="Search for ingredient">
         </form>
     </section>
+
+    <section id="activitySearch-view" class="view">
+            <form action="submit">
+                <input type="text" placeholder="Search for activity">
+            </form>
+    </section>
+
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 crossorigin="anonymous"></script>
 <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
-<script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
 <script src="scripts/models/recipes.js"></script>
 <script src="scripts/views/about-us.js"></script>
 <script src="scripts/views/activity-results.js"></script>
