started adding fields to food search form

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <section id="foodSearch-view" class="view">
         <form action="submit">
             <input type="text" placeholder="Search for ingredient">
+            <input type="text" placeholder="max Calories">
+            <input type="text" placeholder="min Calories">
+            
         </form>
     </section>
 
