--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>FoodFit</title>
 </head>
 <body>
+    <h1>FoodFit</h1>
     <nav>
     <ul id="nav">
         <li><a href="/"> Home</a></li>
@@ -20,7 +21,6 @@
     </nav>
     
     <section id="home-view" class="view">
-        <h1>FoodFit</h1>
         <p>This is a description of the FoodFit app. Your conjecture is totally wrong, I assure you. If I can perceive her regard for him, he must be a simpleton, indeed, not to discover it too. Those were your words.</p>
     </section>
 
@@ -30,10 +30,20 @@
 
     <section id="foodSearch-view" class="view">
         <form action="submit">
-            <input type="text" placeholder="Search for ingredient">
-            <input type="text" placeholder="max Calories">
-            <input type="text" placeholder="min Calories">
-            
+            <input type="text" placeholder="Search for ingredient" id="food">
+            <input type="text" placeholder="max Calories" id="minCal">
+            <input type="text" placeholder="min Calories" id="maxCal">
+            <select name="Dietary Restrictions" id="healthLabel">
+                <option selected disabled>Select One</option>
+                <option value="kosher">Kosher</option>
+                <option value="gluten-free">gluten-free</option>
+                <option value="low-carb">low-carb</option>
+                <option value="peanut-free">no peanuts</option>
+                <option value="vegan">vegan</option>
+                <option value="vegetarian">vegetarian</option>
+                <option value="tree-nut-free">no tree nuts</option>
+            </select>
+            <input type="submit">
         </form>
     </section>
 
