--- a/index.html
+++ b/index.html
@@ -25,31 +25,32 @@
     </section>
 
     <section id="about-view" class="view">
-        This page is about us.
+        This page is about us. We are awesome.
     </section>
 
     <section id="foodSearch-view" class="view">
         <form action="submit">
             <input type="text" placeholder="Search for ingredient" id="food">
-            <input type="text" placeholder="max Calories" id="minCal">
-            <input type="text" placeholder="min Calories" id="maxCal">
+            <input type="text" placeholder="min Calories" id="minCal">
+            <input type="text" placeholder="max Calories" id="maxCal">
             <select name="Dietary Restrictions" id="healthLabel">
                 <option selected disabled>Select One</option>
-                <option value="kosher">Kosher</option>
                 <option value="gluten-free">gluten-free</option>
+                <option value="kosher">Kosher</option>
                 <option value="low-carb">low-carb</option>
                 <option value="peanut-free">no peanuts</option>
+                <option value="tree-nut-free">no tree nuts</option>
                 <option value="vegan">vegan</option>
                 <option value="vegetarian">vegetarian</option>
-                <option value="tree-nut-free">no tree nuts</option>
+                <input type="submit" id="foodSearch-submit">
             </select>
-            <input type="submit">
         </form>
     </section>
 
     <section id="activitySearch-view" class="view">
             <form action="submit">
                 <input type="text" placeholder="Search for activity">
+                <input type="submit" id="foodSearch-submit">
             </form>
     </section>
 
