added food results to html

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         </form>
     </section>
 
+    <section id="foodResults-view" class="view">
+        <h2>Recipes</h2>
+    </section>
+
     <section id="activitySearch-view" class="view">
             <form action="submit">
                 <input type="text" placeholder="Search for activity">
