--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FoodFit</title>
+
+    <script type="text/x-handlebars-template" id="recipe-template">
+
+    </script>
 </head>
 <body>
     <h1>FoodFit</h1>
