broken but on the right path

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
 
     <section id="foodSearch-view" class="view">
-        <form action="submit">
+        <form>
             <input type="text" placeholder="Search for ingredient" id="food" required>
             <input type="text" placeholder="min Calories" id="minCal">
             <input type="text" placeholder="max Calories" id="maxCal">
@@ -47,7 +47,7 @@
                 <option value="vegan">vegan</option>
                 <option value="vegetarian">vegetarian</option>
             </select>
-            <input type="submit" id="foodSearch-submit">
+            <button id="foodSearch-submit">Submit</button>
         </form>
     </section>
 
@@ -56,9 +56,9 @@
     </section>
 
     <section id="activitySearch-view" class="view">
-            <form action="submit">
+            <form>
                 <input type="text" placeholder="Search for activity">
-                <input type="submit" id="foodSearch-submit">
+                <input type="submit" id="activitySearch-submit">
             </form>
     </section>
 
