--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="" />
 
     <script type="text/x-handlebars-template" id="recipe-template">
-        <div>
+        <div data-id="{{id}}">
             <h3 class="label">{{label}}</h3>
             <img src="{{image}}" alt="Photo of {{label}}" >
             <p class="source">Recipe from: {{source}}</p>
@@ -29,8 +29,10 @@
                 <li>{{PROCNT}}</li>            
             </ul>
             <a href="{{url}}" class="url">Directions on how to cook this meal.</a>
+            <button type="click" id="save-recipe">Save Recipe</button>
         </div>        
     </script>
+
 
 
     <body>
@@ -56,17 +58,14 @@
     <section id="foodSearch-view" class="view">
         <form>
             <input type="text" placeholder="Search for ingredient" id="food" required>
-            <input type="text" placeholder="min Calories" id="minCal">
-            <input type="text" placeholder="max Calories" id="maxCal">
+            <input type="text" placeholder="min Calories" id="minCal" required>
+            <input type="text" placeholder="max Calories" id="maxCal" required>
             <select id="healthLabel">
                 <option selected disabled>Select One</option>
-                <option value="gluten-free">gluten-free</option>
-                <option value="kosher">Kosher</option>
-                <option value="low-carb">low-carb</option>
-                <option value="peanut-free">no peanuts</option>
-                <option value="tree-nut-free">no tree nuts</option>
-                <option value="vegan">vegan</option>
-                <option value="vegetarian">vegetarian</option>
+                <option value="&health=peanut-free">no peanuts</option>
+                <option value="&health=tree-nut-free">no tree nuts</option>
+                <option value="&health=vegan">vegan</option>
+                <option value="&health=vegetarian">vegetarian</option>
             </select>
             <button type="click" id="foodSearch-submit">Submit</button>
         </form>
