--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <img src="{{image}}" alt="Photo of {{label}}" >
             <p class="source">Recipe from: {{source}}</p>
             <p class="yield">Number of Servings: {{yield}}</p>
-            <ul id="ingredients">Ingredients:
+            <ul class="ingredients">Ingredients:
                 
             </ul>
-            <ul id="nutrition">Nutrition:
+            <ul class="nutrition">Nutrition:
                 <p>Calories per serving: {{calories}} Cal</p>
                 <li>{{FAT}}</li>
                 <li>{{CHOCDF}}</li>
