--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <p class="source">Recipe from: {{source}}</p>
             <p class="yield">Number of Servings: {{yield}}</p>
             <ul class="ingredients">Ingredients:
-                
+                <li>{{{ingredients}}}</li>
             </ul>
             <ul class="nutrition">Nutrition:
-                <p>Calories per serving: {{calories}} Cal</p>
-                <li>{{FAT}}</li>
-                <li>{{CHOCDF}}</li>
-                <li>{{PROCNT}}</li>            
+                <p>Calories per serving: {{servCalories}}</p>
+                <li>Fat: {{servFat}}g</li>
+                <li>Carbohydrates: {{servCarb}}g</li>
+                <li>Protein: {{servPro}}g</li>            
             </ul>
             <a href="{{url}}" class="url">Directions on how to cook this meal.</a>
             <button type="click" id="save-recipe">Save Recipe</button>
