recipe box works!

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li>Carbohydrates: {{servCarb}}g</li>
                 <li>Protein: {{servPro}}g</li>            
             </ul>
-            <a href="{{url}}" class="url">Directions on how to cook this meal.</a>
+            <a href="{{url}}" class="url">Make This Meal!</a>
             <button data-id="{{id}}" class="save-recipe">Save Recipe</button>
         </div>        
     </script>
@@ -44,8 +44,12 @@
         <li><a href="/about">About Us</a></li>
         <li><a href="/food-search">Recipe Search</a></li>
         <li><a href="/activity-search">Activity Search</a></li>
+        <li><a href="/recipe-box">Recipe Box</a></li>      
     </ul>
     </nav>
+    <section id="recipe-box" class="view">
+            Recipe Box
+        </section>
     
     <section id="home-view" class="view">
         <p>This is a description of the FoodFit app. Your conjecture is totally wrong, I assure you. If I can perceive her regard for him, he must be a simpleton, indeed, not to discover it too. Those were your words.</p>
@@ -94,6 +98,7 @@
 <script src="scripts/views/food-search.js"></script>
 <script src="scripts/views/home.js"></script>
 <script src="scripts/views/login.js"></script>
+<script src="scripts/views/recipe-box.js"></script>
 <script src="scripts/controllers/routes.js"></script>
 </body>
 </html>
