--- a/index.html
+++ b/index.html
@@ -78,9 +78,49 @@
 
     <section id="activitySearch-view" class="view">
             <form>
-                <input type="text" placeholder="Search for activity">
-                <input type="submit" id="activitySearch-submit">
+                    <select id="activity-search">
+                        <option selected disabled>Select One</option>
+                        <option value="fun">fun</option>
+                        <option value="character">character</option>
+                        <option value="superhero">superhero</option>
+                    </select>
+                <button type="click" id="activitySearch-submit">Submit</button>
             </form>
+   
+        <img class="fun" src="activityImg/breathless.jpg" alt="breathless">
+        <img class="fun" src="activityImg/fast-and-furious.jpg" alt="fast-and-furious">
+        <img class="fun" src="activityImg/make-me-a-sandwich.jpg" alt="sandwich">
+        <img class="fun" src="activityImg/movie-night.jpg" alt="movie-night">
+        <img class="fun" src="activityImg/office.jpg" alt="office">
+        <img class="fun" src="activityImg/stretch.jpg" alt="stretch">
+        <img class="fun" src="activityImg/tv.jpg" alt="tv">
+        <img class="fun" src="activityImg/wall-hugger.jpg" alt="wall-hugger">
+        <img class="character" src="activityImg/assisans.jpg" alt="assisans">
+        <img class="character" src="activityImg/bruce-lee.jpg" alt="bruce-lee">
+        <img class="character" src="activityImg/fireman.jpg" alt="fireman">
+        <img class="character" src="activityImg/jedi.jpg" alt="jedi">
+        <img class="character" src="activityImg/lara-croft.jpg" alt="lara-croft">
+        <img class="character" src="activityImg/mermaid.jpg" alt="mermaid">
+        <img class="character" src="activityImg/ninja.jpg" alt="ninja">
+        <img class="character" src="activityImg/pirate.jpg" alt="pirate">
+        <img class="character" src="activityImg/sonic.jpg" alt="sonic">
+        <img class="character" src="activityImg/storm-trooper.jpg" alt="storm-trooper">
+        <img class="superhero" src="activityImg/bat-girl.jpg" alt="bat-girl">
+        <img class="superhero" src="activityImg/black-panther.jpg" alt="black-panther">
+        <img class="superhero" src="activityImg/black-widow.jpg" alt="black-widow">
+        <img class="superhero" src="activityImg/captin-america.jpg" alt="captin-america">
+        <img class="superhero" src="activityImg/cat-woman.jpg" alt="cat-woman">
+        <img class="superhero" src="activityImg/dare-devil.jpg" alt="dare-devil">
+        <img class="superhero" src="activityImg/flash.jpg" alt="flash">
+        <img class="superhero" src="activityImg/harley-quinn.jpg" alt="harley-quinn">
+        <img class="superhero" src="activityImg/ironman.jpg" alt="ironman">
+        <img class="superhero" src="activityImg/ivy.jpg" alt="ivy">
+        <img class="superhero" src="activityImg/joker.jpg" alt="joker">
+        <img class="superhero" src="activityImg/raven.jpg" alt="raven">
+        <img class="superhero" src="activityImg/super-girl.jpg" alt="super-girl">
+        <img class="superhero" src="activityImg/superman.jpg" alt="superman">
+        <img class="superhero" src="activityImg/thor.jpg" alt="thor">
+        <img class="superhero" src="activityImg/wonder-woman.jpg" alt="wonder-woman">
     </section>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
