refined activityImg list to 8 of each class

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                         <option value="fun">fun</option>
                         <option value="character">character</option>
                         <option value="superhero">superhero</option>
+                        <option value="superheroine">superheroine</option>
                     </select>
                 <button type="click" id="activitySearch-submit">Submit</button>
             </form>
@@ -95,7 +96,6 @@
         <img class="fun" src="activityImg/stretch.jpg" alt="stretch">
         <img class="fun" src="activityImg/tv.jpg" alt="tv">
         <img class="fun" src="activityImg/wall-hugger.jpg" alt="wall-hugger">
-        <img class="character" src="activityImg/assisans.jpg" alt="assisans">
         <img class="character" src="activityImg/bruce-lee.jpg" alt="bruce-lee">
         <img class="character" src="activityImg/fireman.jpg" alt="fireman">
         <img class="character" src="activityImg/jedi.jpg" alt="jedi">
@@ -103,24 +103,23 @@
         <img class="character" src="activityImg/mermaid.jpg" alt="mermaid">
         <img class="character" src="activityImg/ninja.jpg" alt="ninja">
         <img class="character" src="activityImg/pirate.jpg" alt="pirate">
-        <img class="character" src="activityImg/sonic.jpg" alt="sonic">
         <img class="character" src="activityImg/storm-trooper.jpg" alt="storm-trooper">
-        <img class="superhero" src="activityImg/bat-girl.jpg" alt="bat-girl">
+        <img class="superheroine" src="activityImg/bat-girl.jpg" alt="bat-girl">
         <img class="superhero" src="activityImg/black-panther.jpg" alt="black-panther">
-        <img class="superhero" src="activityImg/black-widow.jpg" alt="black-widow">
+        <img class="superheroine" src="activityImg/black-widow.jpg" alt="black-widow">
         <img class="superhero" src="activityImg/captin-america.jpg" alt="captin-america">
-        <img class="superhero" src="activityImg/cat-woman.jpg" alt="cat-woman">
+        <img class="superheroine" src="activityImg/cat-woman.jpg" alt="cat-woman">
         <img class="superhero" src="activityImg/dare-devil.jpg" alt="dare-devil">
         <img class="superhero" src="activityImg/flash.jpg" alt="flash">
-        <img class="superhero" src="activityImg/harley-quinn.jpg" alt="harley-quinn">
+        <img class="superheroine" src="activityImg/harley-quinn.jpg" alt="harley-quinn">
         <img class="superhero" src="activityImg/ironman.jpg" alt="ironman">
-        <img class="superhero" src="activityImg/ivy.jpg" alt="ivy">
+        <img class="superheroine" src="activityImg/ivy.jpg" alt="ivy">
         <img class="superhero" src="activityImg/joker.jpg" alt="joker">
-        <img class="superhero" src="activityImg/raven.jpg" alt="raven">
-        <img class="superhero" src="activityImg/super-girl.jpg" alt="super-girl">
+        <img class="superheroine" src="activityImg/raven.jpg" alt="raven">
+        <img class="superheroine" src="activityImg/super-girl.jpg" alt="super-girl">
         <img class="superhero" src="activityImg/superman.jpg" alt="superman">
         <img class="superhero" src="activityImg/thor.jpg" alt="thor">
-        <img class="superhero" src="activityImg/wonder-woman.jpg" alt="wonder-woman">
+        <img class="superheroine" src="activityImg/wonder-woman.jpg" alt="wonder-woman">
     </section>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
