has bugs but is working

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
 
     <section id="foodSearch-view" class="view">
-        <form>
+        <form id="search-form">
             <input type="text" placeholder="Search for ingredient" id="food" required>
             <input type="text" placeholder="min Calories" id="minCal" required>
             <input type="text" placeholder="max Calories" id="maxCal" required>
