added text to display if search produces no results

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <section id="foodResults-view" class="view">
         <h2>Recipes</h2>
-
+        <p id="no-recipes">Sorry, your search did not return any results. Please widen your parameters and try again.</p>
     </section>
 
     <section id="activitySearch-view" class="view">
