working on styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -37,9 +38,11 @@
 
     <body>
     </head>
-    <h1>FoodFit</h1>
+    <button class="hamburger">&#9776;</button>
+    <button class="cross">&#735;</button>
+    <a href="/"><img id="foodfit-logo" src="styles/images/FoodFIt-Logo-w-Text-Rounded-Corners.png" alt="FoodFit Logo"></a>
     <nav>
-    <ul id="nav"> 
+    <ul id="nav" class="menu"> 
         <li><a href="/"> Home</a></li>
         <li><a href="/about">About Us</a></li>
         <li><a href="/food-search">Recipe Search</a></li>
@@ -47,6 +50,7 @@
         <li><a href="/recipe-box">Recipe Box</a></li>      
     </ul>
     </nav>
+    <hr>
     <section id="recipe-box" class="view">
             Recipe Box
         </section>
@@ -92,38 +96,38 @@
                 <button type="click" id="activitySearch-submit">Submit</button>
             </form>
    
-        <img class="fun thumbnail" src="activityImg/breathless.jpg" alt="breathless">
-        <img class="fun thumbnail" src="activityImg/fast-and-furious.jpg" alt="fast-and-furious">
-        <img class="fun thumbnail" src="activityImg/make-me-a-sandwich.jpg" alt="sandwich">
-        <img class="fun thumbnail" src="activityImg/movie-night.jpg" alt="movie-night">
-        <img class="fun thumbnail" src="activityImg/office.jpg" alt="office">
-        <img class="fun thumbnail" src="activityImg/stretch.jpg" alt="stretch">
-        <img class="fun thumbnail" src="activityImg/tv.jpg" alt="tv">
-        <img class="fun thumbnail" src="activityImg/wall-hugger.jpg" alt="wall-hugger">
-        <img class="character thumbnail" src="activityImg/bruce-lee.jpg" alt="bruce-lee">
-        <img class="character thumbnail" src="activityImg/fireman.jpg" alt="fireman">
-        <img class="character thumbnail" src="activityImg/jedi.jpg" alt="jedi">
-        <img class="character thumbnail" src="activityImg/lara-croft.jpg" alt="lara-croft">
-        <img class="character thumbnail" src="activityImg/mermaid.jpg" alt="mermaid">
-        <img class="character thumbnail" src="activityImg/ninja.jpg" alt="ninja">
-        <img class="character thumbnail" src="activityImg/pirate.jpg" alt="pirate">
-        <img class="character thumbnail" src="activityImg/storm-trooper.jpg" alt="storm-trooper">
-        <img class="superheroine thumbnail" src="activityImg/bat-girl.jpg" alt="bat-girl">
-        <img class="superhero thumbnail" src="activityImg/black-panther.jpg" alt="black-panther">
-        <img class="superheroine thumbnail" src="activityImg/black-widow.jpg" alt="black-widow">
-        <img class="superhero thumbnail" src="activityImg/captin-america.jpg" alt="captin-america">
-        <img class="superheroine thumbnail" src="activityImg/cat-woman.jpg" alt="cat-woman">
-        <img class="superhero thumbnail" src="activityImg/dare-devil.jpg" alt="dare-devil">
-        <img class="superhero thumbnail" src="activityImg/flash.jpg" alt="flash">
-        <img class="superheroine thumbnail" src="activityImg/harley-quinn.jpg" alt="harley-quinn">
-        <img class="superhero thumbnail" src="activityImg/ironman.jpg" alt="ironman">
-        <img class="superheroine thumbnail" src="activityImg/ivy.jpg" alt="ivy">
-        <img class="superhero thumbnail" src="activityImg/joker.jpg" alt="joker">
-        <img class="superheroine thumbnail" src="activityImg/raven.jpg" alt="raven">
-        <img class="superheroine thumbnail" src="activityImg/super-girl.jpg" alt="super-girl">
-        <img class="superhero thumbnail" src="activityImg/superman.jpg" alt="superman">
-        <img class="superhero thumbnail" src="activityImg/thor.jpg" alt="thor">
-        <img class="superheroine thumbnail" src="activityImg/wonder-woman.jpg" alt="wonder-woman">
+        <img class="activity fun thumbnail" src="activityImg/breathless.jpg" alt="breathless">
+        <img class="activity fun thumbnail" src="activityImg/fast-and-furious.jpg" alt="fast-and-furious">
+        <img class="activity fun thumbnail" src="activityImg/make-me-a-sandwich.jpg" alt="sandwich">
+        <img class="activity fun thumbnail" src="activityImg/movie-night.jpg" alt="movie-night">
+        <img class="activity fun thumbnail" src="activityImg/office.jpg" alt="office">
+        <img class="activity fun thumbnail" src="activityImg/stretch.jpg" alt="stretch">
+        <img class="activity fun thumbnail" src="activityImg/tv.jpg" alt="tv">
+        <img class="activity fun thumbnail" src="activityImg/wall-hugger.jpg" alt="wall-hugger">
+        <img class="activity character thumbnail" src="activityImg/bruce-lee.jpg" alt="bruce-lee">
+        <img class="activity character thumbnail" src="activityImg/fireman.jpg" alt="fireman">
+        <img class="activity character thumbnail" src="activityImg/jedi.jpg" alt="jedi">
+        <img class="activity character thumbnail" src="activityImg/lara-croft.jpg" alt="lara-croft">
+        <img class="activity character thumbnail" src="activityImg/mermaid.jpg" alt="mermaid">
+        <img class="activity character thumbnail" src="activityImg/ninja.jpg" alt="ninja">
+        <img class="activity character thumbnail" src="activityImg/pirate.jpg" alt="pirate">
+        <img class="activity character thumbnail" src="activityImg/storm-trooper.jpg" alt="storm-trooper">
+        <img class="activity superheroine thumbnail" src="activityImg/bat-girl.jpg" alt="bat-girl">
+        <img class="activity superhero thumbnail" src="activityImg/black-panther.jpg" alt="black-panther">
+        <img class="activity superheroine thumbnail" src="activityImg/black-widow.jpg" alt="black-widow">
+        <img class="activity superhero thumbnail" src="activityImg/captin-america.jpg" alt="captin-america">
+        <img class="activity superheroine thumbnail" src="activityImg/cat-woman.jpg" alt="cat-woman">
+        <img class="activity superhero thumbnail" src="activityImg/dare-devil.jpg" alt="dare-devil">
+        <img class="activity superhero thumbnail" src="activityImg/flash.jpg" alt="flash">
+        <img class="activity superheroine thumbnail" src="activityImg/harley-quinn.jpg" alt="harley-quinn">
+        <img class="activity superhero thumbnail" src="activityImg/ironman.jpg" alt="ironman">
+        <img class="activity superheroine thumbnail" src="activityImg/ivy.jpg" alt="ivy">
+        <img class="activity superhero thumbnail" src="activityImg/joker.jpg" alt="joker">
+        <img class="activity superheroine thumbnail" src="activityImg/raven.jpg" alt="raven">
+        <img class="activity superheroine thumbnail" src="activityImg/super-girl.jpg" alt="super-girl">
+        <img class="activity superhero thumbnail" src="activityImg/superman.jpg" alt="superman">
+        <img class="activity superhero thumbnail" src="activityImg/thor.jpg" alt="thor">
+        <img class="activity superheroine thumbnail" src="activityImg/wonder-woman.jpg" alt="wonder-woman">
     </section>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -138,6 +142,7 @@
 <script src="scripts/views/home.js"></script>
 <script src="scripts/views/login.js"></script>
 <script src="scripts/views/recipe-box.js"></script>
+<script src="scripts/views/hamburger.js"></script>
 <script src="scripts/controllers/routes.js"></script>
 </body>
 </html>
