still working on styling

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FoodFit</title>
@@ -16,8 +16,8 @@
 
     <script type="text/x-handlebars-template" id="recipe-template">
         <div class="recipe-div thumbnail">
-            <h3 class="label">{{label}}</h3>
-            <img src="{{image}}" alt="Photo of {{label}}" >
+            <h3 class="label title-background">{{label}}</h3>
+            <img src="{{image}}" class="recipe-img" alt="Photo of {{label}}" >
             <p class="source">Recipe from: {{source}}</p>
             <p class="yield">Number of Servings: {{yield}}</p>
             <ul class="ingredients">Ingredients:
